---
source: tests/strings.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@str_literal = private unnamed_addr constant [12 x i8] c"Iteration: \00", align 1
@str_literal.1 = private unnamed_addr constant [5 x i8] c"test\00", align 1

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %malloc_str = tail call dereferenceable_or_null(12) ptr @malloc(i64 12)
  tail call void @llvm.memcpy.p0.p0.i64(ptr noundef nonnull align 1 dereferenceable(12) %malloc_str, ptr noundef nonnull align 1 dereferenceable(12) @str_literal, i64 12, i1 false)
  %malloc_str12 = tail call dereferenceable_or_null(5) ptr @malloc(i64 5)
  tail call void @llvm.memcpy.p0.p0.i64(ptr noundef nonnull align 1 dereferenceable(5) %malloc_str12, ptr noundef nonnull align 1 dereferenceable(5) @str_literal.1, i64 5, i1 false)
  %ptr_to_int14 = ptrtoint ptr %malloc_str12 to i64
  %ptr_payload15 = and i64 %ptr_to_int14, 281474976710655
  %ptr_to_int = ptrtoint ptr %malloc_str to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %payload_to_ptr = inttoptr i64 %ptr_payload to ptr
  %payload_to_ptr31 = inttoptr i64 %ptr_payload15 to ptr
  %lhs_len = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr)
  %rhs_len = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr31)
  %total_len = add i64 %rhs_len, 1
  %total_size = add i64 %total_len, %lhs_len
  %malloc_concat = tail call ptr @malloc(i64 %total_size)
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %malloc_concat, ptr align 1 %payload_to_ptr, i64 %lhs_len, i1 false)
  %rhs_dest = getelementptr i8, ptr %malloc_concat, i64 %lhs_len
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %rhs_dest, ptr align 1 %payload_to_ptr31, i64 %total_len, i1 false)
  %ptr_to_int32 = ptrtoint ptr %malloc_concat to i64
  %ptr_payload33 = and i64 %ptr_to_int32, 281474976710655
  %payload_to_ptr82 = inttoptr i64 %ptr_payload33 to ptr
  %puts = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr82)
  %malloc_str.1 = tail call dereferenceable_or_null(12) ptr @malloc(i64 12)
  tail call void @llvm.memcpy.p0.p0.i64(ptr noundef nonnull align 1 dereferenceable(12) %malloc_str.1, ptr noundef nonnull align 1 dereferenceable(12) @str_literal, i64 12, i1 false)
  %malloc_str12.1 = tail call dereferenceable_or_null(5) ptr @malloc(i64 5)
  tail call void @llvm.memcpy.p0.p0.i64(ptr noundef nonnull align 1 dereferenceable(5) %malloc_str12.1, ptr noundef nonnull align 1 dereferenceable(5) @str_literal.1, i64 5, i1 false)
  %ptr_to_int14.1 = ptrtoint ptr %malloc_str12.1 to i64
  %ptr_payload15.1 = and i64 %ptr_to_int14.1, 281474976710655
  %ptr_to_int.1 = ptrtoint ptr %malloc_str.1 to i64
  %ptr_payload.1 = and i64 %ptr_to_int.1, 281474976710655
  %payload_to_ptr.1 = inttoptr i64 %ptr_payload.1 to ptr
  %payload_to_ptr31.1 = inttoptr i64 %ptr_payload15.1 to ptr
  %lhs_len.1 = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr.1)
  %rhs_len.1 = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr31.1)
  %total_len.1 = add i64 %rhs_len.1, 1
  %total_size.1 = add i64 %total_len.1, %lhs_len.1
  %malloc_concat.1 = tail call ptr @malloc(i64 %total_size.1)
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %malloc_concat.1, ptr align 1 %payload_to_ptr.1, i64 %lhs_len.1, i1 false)
  %rhs_dest.1 = getelementptr i8, ptr %malloc_concat.1, i64 %lhs_len.1
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %rhs_dest.1, ptr align 1 %payload_to_ptr31.1, i64 %total_len.1, i1 false)
  %ptr_to_int32.1 = ptrtoint ptr %malloc_concat.1 to i64
  %ptr_payload33.1 = and i64 %ptr_to_int32.1, 281474976710655
  %payload_to_ptr82.1 = inttoptr i64 %ptr_payload33.1 to ptr
  %puts.1 = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr82.1)
  %malloc_str.2 = tail call dereferenceable_or_null(12) ptr @malloc(i64 12)
  tail call void @llvm.memcpy.p0.p0.i64(ptr noundef nonnull align 1 dereferenceable(12) %malloc_str.2, ptr noundef nonnull align 1 dereferenceable(12) @str_literal, i64 12, i1 false)
  %malloc_str12.2 = tail call dereferenceable_or_null(5) ptr @malloc(i64 5)
  tail call void @llvm.memcpy.p0.p0.i64(ptr noundef nonnull align 1 dereferenceable(5) %malloc_str12.2, ptr noundef nonnull align 1 dereferenceable(5) @str_literal.1, i64 5, i1 false)
  %ptr_to_int14.2 = ptrtoint ptr %malloc_str12.2 to i64
  %ptr_payload15.2 = and i64 %ptr_to_int14.2, 281474976710655
  %ptr_to_int.2 = ptrtoint ptr %malloc_str.2 to i64
  %ptr_payload.2 = and i64 %ptr_to_int.2, 281474976710655
  %payload_to_ptr.2 = inttoptr i64 %ptr_payload.2 to ptr
  %payload_to_ptr31.2 = inttoptr i64 %ptr_payload15.2 to ptr
  %lhs_len.2 = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr.2)
  %rhs_len.2 = tail call i64 @strlen(ptr noundef nonnull dereferenceable(1) %payload_to_ptr31.2)
  %total_len.2 = add i64 %rhs_len.2, 1
  %total_size.2 = add i64 %total_len.2, %lhs_len.2
  %malloc_concat.2 = tail call ptr @malloc(i64 %total_size.2)
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %malloc_concat.2, ptr align 1 %payload_to_ptr.2, i64 %lhs_len.2, i1 false)
  %rhs_dest.2 = getelementptr i8, ptr %malloc_concat.2, i64 %lhs_len.2
  tail call void @llvm.memcpy.p0.p0.i64(ptr align 1 %rhs_dest.2, ptr align 1 %payload_to_ptr31.2, i64 %total_len.2, i1 false)
  %ptr_to_int32.2 = ptrtoint ptr %malloc_concat.2 to i64
  %ptr_payload33.2 = and i64 %ptr_to_int32.2, 281474976710655
  %payload_to_ptr82.2 = inttoptr i64 %ptr_payload33.2 to ptr
  %puts.2 = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr82.2)
  ret i32 0
}

; Function Attrs: mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite)
declare noalias noundef ptr @malloc(i64 noundef) local_unnamed_addr #1

; Function Attrs: mustprogress nofree nounwind willreturn memory(argmem: read)
declare i64 @strlen(ptr nocapture) local_unnamed_addr #2

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias nocapture writeonly, ptr noalias nocapture readonly, i64, i1 immarg) #3

; Function Attrs: nofree nounwind
declare noundef i32 @puts(ptr nocapture noundef readonly) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
attributes #1 = { mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite) "alloc-family"="malloc" }
attributes #2 = { mustprogress nofree nounwind willreturn memory(argmem: read) }
attributes #3 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
